; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_roxr_8_r.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_roxr_8_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DY = common dso_local global i32 0, align 4
@DX = common dso_local global i32 0, align 4
@CYC_SHIFT = common dso_local global i32 0, align 4
@FLAG_X = common dso_local global i32 0, align 4
@FLAG_C = common dso_local global i32 0, align 4
@FLAG_N = common dso_local global i32 0, align 4
@FLAG_Z = common dso_local global i32 0, align 4
@VFLAG_CLEAR = common dso_local global i32 0, align 4
@FLAG_V = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_roxr_8_r() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* @DY, i32** %1, align 8
  %6 = load i32, i32* @DX, align 4
  %7 = and i32 %6, 63
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %41

10:                                               ; preds = %0
  %11 = load i32, i32* %2, align 4
  %12 = srem i32 %11, 9
  store i32 %12, i32* %3, align 4
  %13 = load i32*, i32** %1, align 8
  %14 = load i32, i32* %13, align 4
  %15 = call i8* @MASK_OUT_ABOVE_8(i32 %14)
  %16 = ptrtoint i8* %15 to i32
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = call i32 (...) @XFLAG_AS_1()
  %19 = shl i32 %18, 8
  %20 = or i32 %17, %19
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @ROR_9(i32 %20, i32 %21)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @CYC_SHIFT, align 4
  %25 = shl i32 %23, %24
  %26 = call i32 @USE_CYCLES(i32 %25)
  %27 = load i32, i32* %5, align 4
  store i32 %27, i32* @FLAG_X, align 4
  store i32 %27, i32* @FLAG_C, align 4
  %28 = load i32, i32* %5, align 4
  %29 = call i8* @MASK_OUT_ABOVE_8(i32 %28)
  %30 = ptrtoint i8* %29 to i32
  store i32 %30, i32* %5, align 4
  %31 = load i32*, i32** %1, align 8
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @MASK_OUT_BELOW_8(i32 %32)
  %34 = load i32, i32* %5, align 4
  %35 = or i32 %33, %34
  %36 = load i32*, i32** %1, align 8
  store i32 %35, i32* %36, align 4
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @NFLAG_8(i32 %37)
  store i32 %38, i32* @FLAG_N, align 4
  %39 = load i32, i32* %5, align 4
  store i32 %39, i32* @FLAG_Z, align 4
  %40 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %40, i32* @FLAG_V, align 4
  br label %51

41:                                               ; preds = %0
  %42 = load i32, i32* @FLAG_X, align 4
  store i32 %42, i32* @FLAG_C, align 4
  %43 = load i32*, i32** %1, align 8
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @NFLAG_8(i32 %44)
  store i32 %45, i32* @FLAG_N, align 4
  %46 = load i32*, i32** %1, align 8
  %47 = load i32, i32* %46, align 4
  %48 = call i8* @MASK_OUT_ABOVE_8(i32 %47)
  %49 = ptrtoint i8* %48 to i32
  store i32 %49, i32* @FLAG_Z, align 4
  %50 = load i32, i32* @VFLAG_CLEAR, align 4
  store i32 %50, i32* @FLAG_V, align 4
  br label %51

51:                                               ; preds = %41, %10
  ret void
}

declare dso_local i8* @MASK_OUT_ABOVE_8(i32) #1

declare dso_local i32 @ROR_9(i32, i32) #1

declare dso_local i32 @XFLAG_AS_1(...) #1

declare dso_local i32 @USE_CYCLES(i32) #1

declare dso_local i32 @MASK_OUT_BELOW_8(i32) #1

declare dso_local i32 @NFLAG_8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
